--- a/src/app/(pals)/pal/[palId]/components/styles/BreedingList.module.css
+++ b/src/app/(pals)/pal/[palId]/components/styles/BreedingList.module.css
@@ -1,34 +1,35 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   
-  .searchContainer {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
+}
+
+.searchContainer {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.breedingList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.noCombosMessage {
+  text-align: center;
+  color: #555;
+}
+
+@media (min-width: 768px) {
   .breedingList {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     width: 100%;
   }
-  
-  .noCombosMessage {
-    text-align: center;
-    color: #555;
-  }
-  
-  @media (min-width: 600px) {
-    .breedingList {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: space-around;
-    }
-  }
+}
