--- a/src/app/(pals)/pal/[palId]/components/styles/PalDetailsCard.module.css
+++ b/src/app/(pals)/pal/[palId]/components/styles/PalDetailsCard.module.css
@@ -6,6 +6,7 @@
   border: 2px solid #b27fe5;
   border-radius: 20px;
   padding: 20px;
+  margin: 0 auto;
   width: 90%;
   margin-bottom: 20px;
   position: relative;
@@ -44,9 +45,9 @@
   font-size: 16px;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
   .container {
-    max-width: 100%;
+    width: 95%;
   }
 
   .image {
